--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,10 +8,9 @@
     "standard-with-typescript",
     "plugin:@typescript-eslint/recommended"
   ],
-  "overrides": [],
+
   "parserOptions": {
     "ecmaVersion": "latest",
-    "projects": ["./tsconfig.json"],
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks"],
@@ -28,21 +27,22 @@
       }
     ],
     "no-shadow": "off",
+    "semi": [2, "always"],
+    "@typescript-eslint/semi": ["error"],
     "@typescript-eslint/no-shadow": ["error"],
-    "@typescript-eslint/explicit-function-return-type": [
-      "true",
-      {
-        "allowExpressions": true
-      }
-    ],
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "prettier/prettier": ["error", { "singleQuote": true }],
     "max-len": ["off", { "code": 80 }],
     "react-hooks/rules-of-hooks": "warn",
     "react-hooks/exhaustive-deps": "warn",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
-    "quotes": ["error", "double"],
-    "semi": ["warn", "always"],
-    "prettier/prettier": 0,
+    "comma-dangle": "off",
+    "quotes": [
+      "error",
+      "double",
+      { "avoidEscape": true, "allowTemplateLiterals": true }
+    ],
     "no-unused-vars": "warn",
     "no-console": "off",
     "func-names": "off",
