--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-router": "^5.1.19",
     "axios": "^1.1.2",
     "firebase": "^9.10.0",
+    "js-cookie": "^3.0.1",
+    "node": "^19.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
